bug 817454 - ensure PresContext's cached mAppUnitsPerDevPixel value is updated when backing resolution changes. r=roc a=bajaj